...
import 'package:get_it/get_it.dart';
import 'package:local_auth/auth_strings.dart';
import 'package:shared_preferences/shared_preferences.dart';
import '../localization/localization.dart';
import 'package:local_auth/local_auth.dart';

const KEY_AUTH_PAGE_TEXT = "authentication_page_text";

class AuthenticationPage extends StatefulWidget {
  AuthenticationPage({Key key}) : super(key: key);
  @override
  AuthenticationPageState createState() => AuthenticationPageState();
}
...
    return Align(
      alignment: Alignment.bottomCenter,
      child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
        children: <Widget>[
          FlatButton(
            key: Key("register_page_button"),
            color: TRANSPARENT,
            onPressed: () => openRegisterPage(context),
            child: Text(
              getString(context, 'create_account'),
              style: TextStyle(
                color: WHITE,
...
                  validator: (value) {
                    if (value.isEmpty) {
                      return getString(context, 'fill_email');
                    }
                    return null;
                  },
                  key: Key("auth_email_label"),
                  textAlign: TextAlign.start,
                  decoration: InputDecoration(
                      enabledBorder: OutlineInputBorder(
                        borderSide: BorderSide(color: TRANSPARENT),
                      ),
                      filled: true,
                      fillColor: Colors.grey[300],
                      labelText: getString(context, 'email_label'),
                      labelStyle: TextStyle(
                        fontWeight: FontWeight.bold,
                      )),
                  controller: _emailController,
                  onChanged: (text) => handleSubmittedEmail(text),
                ),
...
                        validator: (value) {
                          if (value.isEmpty) {
                            return getString(context, 'fill_password');
                          }
                          return null;
                        },
                        key: Key("auth_password_label"),
                        textAlign: TextAlign.start,
                        decoration: InputDecoration(
                            enabledBorder: OutlineInputBorder(
                              borderSide: BorderSide(color: TRANSPARENT),
                            ),
                            filled: true,
                            fillColor: Colors.grey[300],
                            labelText: getString(context, 'password_label'),
                            labelStyle: TextStyle(
                              fontWeight: FontWeight.bold,
                            )),
                        controller: _passwordController,
                        obscureText: _passwordVisibility,
                        onChanged: (text) => handleSubmittedPassword(text),
...
                      },
                    ),
                  )
                ],
              ),
              RaisedButton(
                key: Key("sign_in_button"),
                color: _colorsApp.buttonColor,
                textColor: Colors.white,
                onPressed: () {
                  if (_formKey.currentState.validate()) {
                    signInUser();
                  }
...
