...
                }
                if (_password != _confirmPassword) {
                  return getString(context, 'password_not_confirmed');
                }
                return null;
              },
              key: Key("confirm_password_label"),
              textAlign: TextAlign.start,
              decoration: InputDecoration(
                  enabledBorder: OutlineInputBorder(
                    borderSide: BorderSide(color: TRANSPARENT),
                  ),
                  filled: true,
...
      ],
    );
  }

  RaisedButton buildRaisedButton(BuildContext context) {
    return RaisedButton(
      key: Key("create_account_button"),
      onPressed: () {
        if (_formKey.currentState.validate()) {
          createAccount();
          _analytics.sendAnalyticsEvent("account_registred");
        }
      },
...
